# swc-plugin-react-compiler

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  justfile  mise.toml  package.json  tsconfig.base.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/swc-plugin-react-compiler/: Cargo.toml
crates/swc-plugin-react-compiler/src/: lib.rs
example/: package.json  tsconfig.json  vite.config.ts
example/src/: App.tsx  data.ts  run.ts  styles.css  types.ts
example/src/components/: TodoFilters.tsx  TodoFooter.tsx  TodoForm.tsx  TodoList.tsx
src/: index.cjs  index.d.ts  index.js
