[workspace]
members = ["crates/swc-plugin-react-compiler"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"

[workspace.dependencies]
react_compiler = { git = "https://github.com/facebook/react.git", rev = "b49e04151e1c2cd34f4612e43c5e38edf5da56e2" }
react_compiler_swc = { git = "https://github.com/facebook/react.git", rev = "b49e04151e1c2cd34f4612e43c5e38edf5da56e2" }
serde_json = "1"
swc_core = { version = "=60.0.0", features = [
  "ecma_parser_typescript",
  "ecma_plugin_transform",
] }
