[package]
name = "swc-plugin-react-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
react_compiler = { workspace = true }
react_compiler_swc = { workspace = true }
serde_json = { workspace = true }
swc_core = { workspace = true }
